[package]
name = "snafu-cli-debug"
version = "0.1.1"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/snafu-cli-debug"
readme = "README.md"
description = "Derive a debug implementation on snafu errors that prints pretty CLI output"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.39"
quote = "0.6.12"
proc-macro2 = "0.4.30"

[dev-dependencies]
snafu = "0.5"
